# kisscm

./: README.md
homework/1/: main.py  readme.md  tests.py
homework/1/shell/: emulator.py
homework/1/shell/vfs/: vfs.py
homework/2/: .gitignore  config.json  go.mod  main.py  mermaid_input.mmd  readme.md  test.py
homework/2/cmd/: main.go
homework/2/config/: config.go  config.json
homework/2/internal/commits/: commits.go
homework/3/: CMakeLists.txt  readme.md
homework/3/files/: test.yaml  test_out.txt
homework/3/src/: main.cpp
homework/3/tests/: tests.cpp
homework/3/translator/: Translator.cpp  Translator.h
homework/4/: readme.md
homework/4/assemble/: Assemble.cpp  Assemble.h
homework/4/files/: input.asm  log.xml  result.xml
homework/4/interpret/: Interpret.cpp  Interpret.h
homework/4/tests/: tests.cpp
practics/1/: README.md
practics/2/: README.md
practics/3/: README.md
